--- a/css/estilos.css
+++ b/css/estilos.css
@@ -561,3 +561,158 @@ footer{
     margin-bottom: 40px;
 }
 
+@media (max-width : 980px){
+    body{
+        font-family: 'Roboto Condensed', sans-serif;
+        background-image: url(https://images5.alphacoders.com/114/1149571.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position: center center;
+    
+    }
+    .header{
+        background-color: black;
+        height: 80px;
+        width: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+    }
+    /*---------------NAV--------------------*/
+    .nav{
+        display: flex;
+        justify-content: space-between;
+    }
+    .nav img{
+        height: 55px;
+        margin-top: 10px;
+        margin-left: 10px;
+    }
+    .nav-link{
+        color: aliceblue;
+        text-decoration: none;
+        text-transform: capitalize;
+    }
+    .nav-menu{
+        display: flex;
+        margin: 0 50px 0 0 ;
+        list-style: none;
+    }
+    .nav-menu-item{
+        line-height: 80px;
+        margin: 0 10px;
+        text-transform: uppercase;
+        width: max-content;
+        
+    }
+    .nav-menu-link{
+        padding: 8px 12px;
+        border-radius: 3px;
+    }
+    .nav-menu-link:hover,
+    .nav-menu-link_active{
+        background-color:rgb(48, 13, 151);
+        transition: 1.1s;
+    }
+    .nav-toggle{
+        color: aliceblue;
+        background:none;
+        border: none;
+        font-size: 30px;
+        padding: 0 20px;
+        line-height: 60px;
+        cursor: pointer;
+    
+        display: none;
+    }
+    .showcase{
+        width: 100%;
+        height: 500px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        padding: 0px 20px;
+        color: antiquewhite;
+        position: relative;
+        margin-top: 70px;
+        
+    }
+    .video-container{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        
+    }
+    .video-container video{
+    width: 100%;
+    
+    }
+    .video-container:after{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0,0,0,0.6);
+    }
+    .content{
+        z-index: 2;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-family: 'Finlandica', sans-serif;
+        margin-top: 70px;
+    }
+    .content h2{
+        color: rgb(203, 200, 214);
+        font-size: 20px;
+    }
+    
+    .content a{
+    background-color: rgb(30, 12, 95);
+    color: aliceblue;
+    width: 100px;
+    height: 55px;
+    border-radius: 20px;
+    color: aliceblue;
+    font-family: 'Roboto Condensed', sans-serif;
+    text-decoration: none;
+    text-transform: capitalize;
+    text-align: center;
+    font-size: 16px;
+    padding: 20px 0px;
+    }
+    .content a:Hover{
+        background-color: rgb(40, 16, 113);
+        transform: scale(1.1);
+        transition: 0.6s;
+    }
+    .redes{
+        display: flex;
+        height: 50px;
+        align-items: center;
+        justify-content: center;
+        background-color: black;
+
+    }
+    .redes ul li{
+        margin: 20px 10px;
+        width: 45px;
+        height: 40px;
+        text-align: center;
+    }
+    .redes ul li a{
+        background-color: #333;
+        color: aliceblue;
+        font-size: 16px;
+        box-shadow: 0px 3px 5px 0px rgba(0, 0 , 0, .2);
+        transition: .2s;
+    }
+
+}
