--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,7 +5,7 @@
 }
 body{
     font-family: 'Roboto Condensed', sans-serif;
-    background-image: url(https://images5.alphacoders.com/114/1149571.jpg);
+    background-color: black;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -64,78 +64,10 @@ body{
     padding: 0 20px;
     line-height: 60px;
     cursor: pointer;
-
     display: none;
+
 }
 
-
-@media (max-width:768px) {
-    body{
-        padding-top: 70px;
-        background-image: url(https://images5.alphacoders.com/114/1149571.jpg);
-
-    }
-    .header{
-        height: 60px;
-      
-    }
-    .nav img{
-        height: 40px;
-        margin-top: 10px;
-        margin-left: 10px;
-    }
-    .nav-menu{
-        display: flex;
-        flex-direction: column;
-        margin: 0 20px 0 0 ;
-        list-style: none;
-        background-image: url(https://images5.alphacoders.com/114/1149571.jpg);
-        position: fixed;
-        left: 0;
-        top: 60px;
-        width: 100%;
-        justify-content: center;
-        align-items: center;
-        padding: 20px 0;
-        height: calc(100% - 60px);
-        overflow-y: auto;
-        
-        left: 100%;
-        transition: left 0.3s;
-    }
-    .nav-menu-item{
-        line-height: 65px;
-        margin: 0 10px;
-        text-transform: uppercase;
-        width: max-content;
-        
-    }
-    .nav-menu-link{
-        padding: 8px 12px;
-        border-radius: 3px;
-    }
-    .nav-menu-link:hover,
-    .nav-menu-link_active{
-        background: none;
-        color: rgb(14, 255, 235);
-        transition: 0.5s;
-    }
-    .nav-toggle{
-        color: aliceblue;
-        background:none;
-        border: none;
-        font-size: 30px;
-        padding: 0 20px;
-        line-height: 60px;
-        
-        display: block;
-    
-    }
-    .nav-menu_visible{
-        left: 0;
-
-    }
-}
 /*----------------MAIN INDEX---------------*/
 .showcase{
     width: 100%;
@@ -561,10 +493,10 @@ footer{
     margin-bottom: 40px;
 }
 
-@media (max-width : 980px){
+@media (max-width : 1500px){
     body{
         font-family: 'Roboto Condensed', sans-serif;
-        background-image: url(https://images5.alphacoders.com/114/1149571.jpg);
+        background-color: black;
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -578,6 +510,7 @@ footer{
         position: fixed;
         top: 0;
         left: 0;
+        z-index: 5;
     }
     /*---------------NAV--------------------*/
     .nav{
@@ -695,17 +628,17 @@ footer{
     }
     .redes{
         display: flex;
-        height: 50px;
+        height: 90px;
         align-items: center;
         justify-content: center;
-        background-color: black;
+        background-color: rgb(48, 13, 151);
+        margin-top: 20px;
 
     }
     .redes ul li{
-        margin: 20px 10px;
         width: 45px;
         height: 40px;
-        text-align: center;
+        margin: 0px 10px;
     }
     .redes ul li a{
         background-color: #333;
@@ -714,5 +647,197 @@ footer{
         box-shadow: 0px 3px 5px 0px rgba(0, 0 , 0, .2);
         transition: .2s;
     }
+    .Skins{
+        display: flex;
+        align-items:center;
+        flex-flow: row wrap;
+        background-image: url(https://whatifgaming.com/wp-content/uploads/2022/05/Dark-Star-scaled.jpg);
+        height: 100%;
+        width: 100%;
+    }
+    .Skins h2{
+        height: 40vh;
+        width: 100%;
+        font-size: 50px;
+        align-items: center;
+        color: rgb(255, 255, 255);
+        font-family:'Oswald', sans-serif;
+        
+    }
+    .Skins h2 span{
+        font-size: 150px;
+        text-transform: uppercase;
+        font-family: 'Oswald', sans-serif;
+    }
+    .producto{
+        width: 420px;
+        position: relative;
+        margin:30px;
+        background-color: rgb(30, 12, 95);
+        border: 2px solid rgb(30, 12, 95);
+        font-family: 'Oswald', sans-serif;
+    }
+    .producto img{
+        width: 100%;
+        height: 100%;
+        box-shadow: 5px 5px 5px 5px; color:rgba(30, 12, 95, 0.76);
+        border-radius: 15px;
+    }
+    .producto img:hover{
+        transition: 0.6s;
+        transform: scale(1.20);
+    }
+    .producto h3{
+        position: absolute;
+        top: 0;
+        background-color: #331bbd71;
+        color: white;
+        font-family: 'Oswald', sans-serif;
+        text-transform:capitalize;
+    }
+    .producto p{
+        position: absolute;
+        bottom: 0;
+        color: aliceblue;
+        font-family: 'Oswald', sans-serif;
+        background-color:  #331bbd71;
+        text-transform: uppercase;
 
+}
+.playstore{
+    color: aliceblue;
+    font-family: 'Oswald', sans-serif;
+    display: flex;
+    justify-content: space-around;
+    text-transform: uppercase;
+    margin-bottom: 15px;
+    padding: 40px;
+    background-color: rgb(30, 12, 95);
+    width: 100%;
+}
+.playstore a{
+    background-color: #334a97;
+    width: 150px;
+    height: auto;
+    text-decoration: none;
+    text-align: center;
+    color: aliceblue;
+    border-radius: 5px;
+    margin: 5px 15px;
+
+}
+.playstore a:Hover{
+    scale: 1.15;
+    transition: 0.5s;
+    background-color: #c300ff;
+}
+footer{
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    color: aliceblue;
+    font-family: 'Oswald', sans-serif;
+
+}
+}
+@media (max-width : 960px){
+    .Skins{
+        display: flex;
+        align-items:center;
+        flex-flow:  row wrap;
+        background-image: url(https://whatifgaming.com/wp-content/uploads/2022/05/Dark-Star-scaled.jpg);
+        height: 100%;
+        width: 100%;
+
+}
+.producto{
+    width: 350px;
+}
+.playstore h3 {
+    padding-right: 20px;
+
+
+}
+}
+@media (max-width:845px){
+    .playstore h3{
+        width: 200px;
+
+    }
+    .playstore a{
+        height: 52px;
+    }
+}
+@media (max-width:820px){
+    .Skins{
+        flex-flow: column wrap;
+        
+        
+    }
+}
+@media (max-width:768px) {
+    body{
+        padding-top: 70px;
+        background-color: black;
+    }
+    .header{
+        height: 60px;
+      
+    }
+    .nav img{
+        height: 40px;
+        margin-top: 10px;
+        margin-left: 10px;
+    }
+    .nav-menu{
+        display: flex;
+        flex-direction: column;
+        margin: 0 20px 0 0 ;
+        list-style: none;
+        background-color: rgba(2, 1, 2, 0.788);
+        position: fixed;
+        left: 0;
+        top: 60px;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        padding: 20px 0;
+        height: calc(100% - 60px);
+        overflow-y: auto;
+        
+        left: 100%;
+        transition: left 0.3s;
+    }
+    .nav-menu-item{
+        line-height: 65px;
+        margin: 0 10px;
+        text-transform: uppercase;
+        width: max-content;
+        
+    }
+    .nav-menu-link{
+        padding: 8px 12px;
+        border-radius: 3px;
+    }
+    .nav-menu-link:hover,
+    .nav-menu-link_active{
+        background: none;
+        color: rgba(29, 163, 216, 0.959);
+        transition: 0.5s;
+    }
+    .nav-toggle{
+        color: aliceblue;
+        background:none;
+        border: none;
+        font-size: 30px;
+        padding: 0 30px;
+        line-height: 60px;
+        display: block;
+        
+    
+    }
+    .nav-menu_visible{
+        left: 0;
+
+    }
 }
