--- a/css/estilos.css
+++ b/css/estilos.css
@@ -12,6 +12,9 @@ body{
     background-position: center center;
 
 }
+.bodycamp{
+    background-image: url(https://images5.alphacoders.com/114/1149571.jpg);
+}
 .header{
     background-color: black;
     height: 80px;
@@ -840,4 +843,54 @@ footer{
         left: 0;
 
     }
+}
+@media (max-width:1215px){
+    .flex-container{
+        display: flex;
+        justify-content: center;
+        margin:50px 0px;
+        padding: 50px 20px;
+        width: 100%;
+        height: 500px;
+        background-color: #4062d1;
+    }
+    .grieta{
+        display: flex;
+        color: aliceblue;
+        font-family: 'Oswald', sans-serif;
+        width: 70vh;
+        height: 100%;
+        padding: 15px 20px;
+        justify-content: center;
+        margin: 10px;
+        flex-flow: column ;
+        background-color: #333;
+    }
+    .grieta h2{
+        color: #334a97;
+        text-align: center;
+        height: 80px;
+    
+    }
+    .grieta p{
+        font-size: 16px;
+    }
+    .grietaimg{
+        width: 60vh;
+        height: 50px;
+       margin: 15px;
+    }
+    .grietaimg img{
+        width: auto;
+    }
+    .aramimg{
+        width: 60vh;
+        height: 50px;
+        margin: 15px;
+    }
+    .aramimg img{
+        width: 500px;
+        height: 350px;
+
+}
 }
