--- a/css/estilos.css
+++ b/css/estilos.css
@@ -272,10 +272,20 @@ margin-top: 40px;
 .grieta h2{
     color: #334a97;
 }
+.grieta .dos{
+    display: none;
+}
 .grietaimg{
     width: 50vh;
     height: 50px;
    margin: 15px;
+}
+.grietaimg img{
+    border-radius: 15px;
+        border: 2px solid rgb(48, 13, 151);
+        box-shadow: 14px 8px 60px 15px rgba(48,13,151,0.61);
+        -webkit-box-shadow: 14px 8px 60px 15px rgba(48,13,151,0.61);
+        -moz-box-shadow: 14px 8px 60px 15px rgba(48,13,151,0.61);   
 }
 .aramimg{
     width: 50vh;
@@ -285,6 +295,11 @@ margin-top: 40px;
 .aramimg img{
     width: 500px;
     height: 350px;
+    border-radius: 15px;
+        border: 2px solid rgb(48, 13, 151);
+        box-shadow: 14px 8px 60px 15px rgba(48,13,151,0.61);
+        -webkit-box-shadow: 14px 8px 60px 15px rgba(48,13,151,0.61);
+        -moz-box-shadow: 14px 8px 60px 15px rgba(48,13,151,0.61);   
 }
 /*---------------- SECTION SKINS---------------*/
 .Skins{
@@ -743,6 +758,74 @@ footer{
 
 }
 }
+@media (max-width:1215px){
+    .flex-container{
+        display: flex;
+        justify-content: center;
+        margin:50px 0px;
+        padding: 50px 20px;
+        width: 100%;
+        height: 500px;
+    }
+    .grieta{
+        display: flex;
+        color: aliceblue;
+        font-family: 'Oswald', sans-serif;
+        width: 70vh;
+        height: 100%;
+        padding: 15px 20px;
+        justify-content: center;
+        margin: 10px;
+        flex-flow: column ;
+    }
+    .grieta h2{
+        color: #334a97;
+        text-align: center;
+        height: 80px;
+    
+    }
+    .grieta p{
+        font-size: 16px;
+    }
+    .grietaimg{
+        width: 60vh;
+        height: 50px;
+       margin: 15px;
+    }
+    .grietaimg img{
+        width: auto;
+    }
+    .aramimg{
+        width: 60vh;
+        height: 50px;
+        margin: 15px;
+    }
+    .aramimg img{
+        width: 500px;
+        height: 350px;
+
+}
+
+    .grid-container{
+        display: grid;
+        grid-template-columns: auto auto auto  ;
+        grid-template-rows: auto auto auto ;
+        grid-template-areas:    "img1 img1 img3 img3"
+                                "img2 img9 img5 img6"
+                                 "img7 img4 img8 img8";
+        width: auto;
+        height: 1100px;
+        gap: 25px 25px;
+        padding: 15px;
+        margin: 15px;
+}
+    .grid-container div{
+        border:3px solid rgb(15, 11, 82);
+        box-shadow: 5px 5px 5px 5px; color: rgb(4, 31, 56);
+        margin: 5px;
+        border-radius: 15px;
+}
+}
 @media (max-width : 960px){
     .Skins{
         display: flex;
@@ -843,54 +926,94 @@ footer{
         left: 0;
 
     }
-}
-@media (max-width:1215px){
-    .flex-container{
-        display: flex;
-        justify-content: center;
-        margin:50px 0px;
-        padding: 50px 20px;
-        width: 100%;
-        height: 500px;
-        background-color: #4062d1;
+    .showcase{
+        height: 300px;
     }
-    .grieta{
-        display: flex;
-        color: aliceblue;
-        font-family: 'Oswald', sans-serif;
-        width: 70vh;
-        height: 100%;
-        padding: 15px 20px;
-        justify-content: center;
-        margin: 10px;
-        flex-flow: column ;
-        background-color: #333;
+    .grietaimg img {
+        width: 350px;
+        height: auto;
+        border-radius: 15px;
+        border: 2px solid rgb(48, 13, 151);
+        box-shadow: 14px 8px 60px 15px rgba(48,13,151,0.61);
+-webkit-box-shadow: 14px 8px 60px 15px rgba(48,13,151,0.61);
+-moz-box-shadow: 14px 8px 60px 15px rgba(48,13,151,0.61);
     }
-    .grieta h2{
-        color: #334a97;
-        text-align: center;
-        height: 80px;
-    
-    }
-    .grieta p{
-        font-size: 16px;
-    }
-    .grietaimg{
-        width: 60vh;
-        height: 50px;
-       margin: 15px;
-    }
-    .grietaimg img{
-        width: auto;
+    .grietaimg {
+        padding-top: 100px;
     }
     .aramimg{
-        width: 60vh;
-        height: 50px;
-        margin: 15px;
+        padding-top: 100px;
     }
     .aramimg img{
-        width: 500px;
-        height: 350px;
+        width: 350px;
+        height: auto;
+        border-radius: 15px;
+        border: 2px solid rgb(48, 13, 151);
+        box-shadow: 14px 8px 60px 15px rgba(48,13,151,0.61);
+        -webkit-box-shadow: 14px 8px 60px 15px rgba(48,13,151,0.61);
+        -moz-box-shadow: 14px 8px 60px 15px rgba(48,13,151,0.61);   
+    }
+    .grieta .uno{
+        display: none;
+    }
+    .grieta .dos{
+        display: block;
+    }
+}
+@media (max-width:530px) {
+    .video-container{
+        position: absolute;
+        width: 100%;
+        height: auto;
+        
+        overflow: hidden;
 
+
+}
+.showcase{
+    width: 100%;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 0px 20px;
+    color: antiquewhite;
+    position: relative;
+    margin-top: 70px;
+    
+}
+.video-container{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    
+}
+.video-container video{
+width: 100%;
+
+}
+.redes{
+    display: flex;
+    height: 90px;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(48, 13, 151);
+    margin-top: 20px;
+
+}
+.redes ul li{
+    width: 35px;
+    height: 30x;
+    margin: 0px 10px;
+}
+.redes ul li a{
+    background-color: #333;
+    color: aliceblue;
+    font-size: 16px;
+    box-shadow: 0px 3px 5px 0px rgba(0, 0 , 0, .2);
+    transition: .2s;
 }
 }
