--- a/css/estilos.css
+++ b/css/estilos.css
@@ -147,7 +147,8 @@ margin-top: 40px;
     height: 8vh;
     align-items: center;
     justify-content: center;
-    background-color: black;
+    background-color: rgb(15, 11, 82);
+    margin: 25px 15px;
 }
 .redes ul li{
     display: inline-block;
@@ -158,7 +159,8 @@ margin-top: 40px;
 }
 .redes ul li a{
     display: block;
-    padding: 0 10px;
+    margin-top: 7px;
+    padding: 0px 10px;
     background-color: #333;
     color: aliceblue;
     line-height: 50px;
@@ -1016,4 +1018,37 @@ width: 100%;
     box-shadow: 0px 3px 5px 0px rgba(0, 0 , 0, .2);
     transition: .2s;
 }
+}
+.mapass{
+    margin: 20px;
+
+}
+.carousel{
+    padding-right: 50px;
+    background-color: rgb(0, 0, 0);
+
+    
+}
+.carousel-item{
+    background-color: rgb(0, 0, 0);
+    margin: 50px;
+}
+.carousel-item img{
+    height: 83vh;
+    
+}
+.aram{
+    border-radius: 50px;
+}
+.mapari{
+    display: flex;
+    width: 100%;
+    height: 10vh;
+    background-color: rgb(15, 11, 82);
+    justify-content: center;
+    align-items: center;
+}
+.mapari h2{
+    color: white;
+    font-size: 30px;
 }
