--- a/css/estilos.css
+++ b/css/estilos.css
@@ -40,11 +40,12 @@ body{
 }
 .nav-menu{
     display: flex;
-    margin: 0 50px 0 0 ;
+    margin:15px 50px  ;
     list-style: none;
+
 }
 .nav-menu-item{
-    line-height: 80px;
+    line-height: 20px;
     margin: 0 10px;
     text-transform: uppercase;
     width: max-content;
@@ -53,6 +54,7 @@ body{
 .nav-menu-link{
     padding: 8px 12px;
     border-radius: 3px;
+
 }
 .nav-menu-link:hover,
 .nav-menu-link_active{
@@ -134,6 +136,7 @@ text-align: center;
 padding-top: 28px;
 font-size: 40px;
 margin-top: 40px;
+line-height: 50px;
 }
 .content a:Hover{
     background-color: rgb(40, 16, 113);
@@ -549,11 +552,11 @@ footer{
     }
     .nav-menu{
         display: flex;
-        margin: 0 50px 0 0 ;
+        margin: 0 50px 0 0;
         list-style: none;
     }
     .nav-menu-item{
-        line-height: 80px;
+        line-height: 30px;
         margin: 0 10px;
         text-transform: uppercase;
         width: max-content;
@@ -1019,6 +1022,7 @@ width: 100%;
     transition: .2s;
 }
 }
+
 .mapass{
     margin: 20px;
 
