--- a/css/estilos.css
+++ b/css/estilos.css
@@ -107,42 +107,7 @@ width: 100%;
     height: 100%;
     background: rgba(0,0,0,0.6);
 }
-.content{
-    z-index: 2;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-family: 'Finlandica', sans-serif;
-    margin-top: 70px;
-}
-.content h2{
-    color: rgb(203, 200, 214);
-    font-size: 30px;
-}
 
-.content a{
-background-color: rgb(30, 12, 95);
-color: aliceblue;
-width: 250px;
-height: 100px;
-border-radius: 20px;
-color: aliceblue;
-font-family: 'Roboto Condensed', sans-serif;
-text-decoration: none;
-text-transform: capitalize;
-text-align: center;
-padding-top: 28px;
-font-size: 40px;
-margin-top: 40px;
-line-height: 50px;
-}
-.content a:Hover{
-    background-color: rgb(40, 16, 113);
-    transform: scale(1.1);
-    transition: 0.6s;
-}
 /*----------------REDES---------------*/
 
 .redes{
@@ -783,6 +748,79 @@ footer{
         margin: 5px;
         border-radius: 15px;
 }
+    .akali{
+        background-image: url(https://images2.alphacoders.com/934/934768.jpg);
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-left: 500px;
+    }
+    .cubito{
+        width: 200px;
+        height: 200px;
+        background-color: rgba(0, 255, 255, 0);
+        border: 1px solid gray;
+        transform: rotateZ(45deg);
+        animation: transfo 6s forwards infinite;
+        
+    }
+    @keyframes transfo{
+        0%{
+            background-image: url(https://www.leagueoflegends.com/static/assassin-two-3a0fb5383eca19a4bc9b3c53310380bf.png);
+            background-size: cover;
+            transform: rotateZ(20deg);
+            border: 1px solid gray;
+            
+          
+    
+        }
+        50%{
+            background-image: url(https://www.leagueoflegends.com/static/assassin-four-d763afcd430fe6194d5640d6bf2a5941.png);
+            background-size: cover;
+            transform: rotateZ(10deg);
+            border: 1px solid red;
+    
+    
+        }
+        100%{
+            background-image: url(https://www.leagueoflegends.com/static/assassin-three-3b9f65b6c20d5779628f7a8b04b43819.png);
+            background-size: cover;
+            transform: rotateZ(0deg);
+            border: 1px solid rgb(99, 16, 99);
+        }
+    }
+    .titulona{
+        position: relative;
+        display: flex;
+        flex-direction: column ;
+        align-items: center;
+        width: 500px;
+        height: 200px;
+        padding-left: 60px;
+    
+    
+    }
+    .titulona h1{
+        text-align: center;
+        text-transform: uppercase;
+        color: aliceblue;
+        font-family: 'Oswald', sans-serif;
+    }
+    .titulona h1 span{
+        font-size: 80px;
+        color: rgb(99, 16, 99);
+        
+        
+        
+    }
+    .titulona p{
+        padding-top: 30px;
+        color: white;
+        font-size: 20px;
+        font-family: 'Oswald', sans-serif;
+    }
 }
 @media (max-width : 960px){
     .Skins{
@@ -1024,4 +1062,171 @@ width: 100%;
 .mapari h2{
     color: white;
     font-size: 30px;
+}
+.akali{
+    background-image: url(https://images2.alphacoders.com/934/934768.jpg);
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 500px;
+}
+.cubito{
+    width: 500px;
+    height: 500px;
+    background-color: rgba(0, 255, 255, 0);
+    border: 1px solid gray;
+    transform: rotateZ(45deg);
+    animation: transfo 6s forwards infinite;
+    
+}
+@keyframes transfo{
+    0%{
+        background-image: url(https://www.leagueoflegends.com/static/assassin-two-3a0fb5383eca19a4bc9b3c53310380bf.png);
+        background-size: cover;
+        transform: rotateZ(20deg);
+        border: 1px solid gray;
+        
+      
+
+    }
+    50%{
+        background-image: url(https://www.leagueoflegends.com/static/assassin-four-d763afcd430fe6194d5640d6bf2a5941.png);
+        background-size: cover;
+        transform: rotateZ(10deg);
+        border: 1px solid red;
+
+
+    }
+    100%{
+        background-image: url(https://www.leagueoflegends.com/static/assassin-three-3b9f65b6c20d5779628f7a8b04b43819.png);
+        background-size: cover;
+        transform: rotateZ(0deg);
+        border: 1px solid rgb(99, 16, 99);
+    }
+}
+.titulona{
+    position: relative;
+    display: flex;
+    flex-direction: column ;
+    align-items: center;
+    width: 500px;
+    height: 200px;
+    padding-left: 60px;
+
+
+}
+.titulona h1{
+    text-align: center;
+    text-transform: uppercase;
+    color: aliceblue;
+    font-family: 'Oswald', sans-serif;
+}
+.titulona h1 span{
+    font-size: 80px;
+    color: rgb(99, 16, 99);
+    
+    
+    
+}
+.titulona p{
+    padding-top: 30px;
+    color: white;
+    font-size: 20px;
+    font-family: 'Oswald', sans-serif;
+}
+@media (max-width:1215px){
+    .cubito{
+        width: 350px;
+        height: 350px;
+        background-color: rgba(0, 255, 255, 0);
+        border: 1px solid gray;
+        transform: rotateZ(45deg);
+        animation: transfo 6s forwards infinite
+    }
+    .titulona{
+    flex-direction: column ;
+    align-items: center;
+    width: 500px;
+    height: 200px;
+
+    }
+    .akali{
+    display: flex;
+    flex-direction: column-reverse;
+    padding-right: 350px;
+
+        
+    }
+
+}
+@media (max-width:635px){
+    .carousel-item img{
+        height: 60vh;
+        width: 100vh;
+
+}
+}
+/*.content{
+    border: 1px solid rgba(128, 128, 128, 0.685);
+    height: 85%;
+    width: 85%;
+    margin-bottom: 50px;
+}*/
+.video2{
+    height: 85%;
+    width: 85%;
+    margin-top: 60px;
+    z-index: 3;
+    /*display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-family: 'Finlandica', sans-serif;
+    margin-top: 70px;*/
+
+
+}
+.video2 video{
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+.pqsi{
+    display: flex;
+    border: 1px solid gray;
+    height: 104%;
+    width: 86%;
+    z-index: 6;
+    position: relative;
+    bottom: 720px;
+    left: 110px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
+}
+.pqsi img{
+    width: 35%;
+    height: 35%;
+    margin-bottom: 75px;
+}
+.pqsi a{
+    width: 180px;
+    height: 55px;
+    background-color: #249b91;
+    text-decoration: none;
+    line-height: 55px;
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    color: black;
+
+}
+.pqsi a:Hover{
+    border: 1px solid rgba(128, 128, 128, 0.89);
+    background-color: #33c9bc;
+    transition: 0.6s;
 }
