--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,57 +13,8 @@
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 15;
 }
-/*---------------NAV--------------------*/
-.nav{
-    display: flex;
-    justify-content: space-between;
-}
-.nav img{
-    height: 55px;
-    margin-top: 10px;
-    margin-left: 10px;
-}
-.nav-link{
-    color: aliceblue;
-    text-decoration: none;
-    text-transform: capitalize;
-}
-.nav-menu{
-    display: flex;
-    margin:15px 50px  ;
-    list-style: none;
-
-}
-.nav-menu-item{
-    line-height: 20px;
-    margin: 0 10px;
-    text-transform: uppercase;
-    width: max-content;
-    
-}
-.nav-menu-link{
-    padding: 8px 12px;
-    border-radius: 3px;
-
-}
-.nav-menu-link:hover,
-.nav-menu-link_active{
-    background-color:rgb(48, 13, 151);
-    transition: 1.1s;
-}
-.nav-toggle{
-    color: aliceblue;
-    background:none;
-    border: none;
-    font-size: 30px;
-    padding: 0 20px;
-    line-height: 60px;
-    cursor: pointer;
-    display: none;
-
-}
-
 /*----------------MAIN INDEX---------------*/
 .showcase{
     width: 100%;
@@ -263,7 +214,7 @@ width: 100%;
         -moz-box-shadow: 14px 8px 60px 15px rgba(48,13,151,0.61);   
 }
 /*---------------- SECTION SKINS---------------*/
-.Skins{
+/*.Skins{
     display: flex;
     align-items:center;
     flex-flow: row wrap;
@@ -327,6 +278,7 @@ width: 100%;
     font-family: 'Oswald', sans-serif;
     display: flex;
     justify-content: space-around;
+    align-items: center;
     text-transform: uppercase;
     margin-bottom: 15px;
     padding: 40px;
@@ -341,6 +293,7 @@ width: 100%;
     text-align: center;
     color: aliceblue;
     border-radius: 5px;
+    line-height: 60px;
 }
 .playstore a:Hover{
     scale: 1.15;
@@ -922,7 +875,7 @@ footer{
     .nav-menu_visible{
         left: 0;
 
-    }
+    }*/
     .showcase{
         height: 300px;
     }
@@ -1021,39 +974,6 @@ width: 100%;
     transition: .2s;
 }
 }
-
-.mapass{
-    margin: 20px;
-
-}
-.carousel{
-    padding-right: 50px;
-    background-color: rgb(0, 0, 0); 
-    
-}
-.carousel-item{
-    background-color: rgb(0, 0, 0);
-    margin: 50px;
-}
-.carousel-item img{
-    height: 83vh;
-    
-}
-.aram{
-    border-radius: 50px;
-}
-.mapari{
-    display: flex;
-    width: 100%;
-    height: 10vh;
-    background-color: rgb(15, 11, 82);
-    justify-content: center;
-    align-items: center;
-}
-.mapari h2{
-    color: white;
-    font-size: 30px;
-}
 .akali{
     background-image: url(https://images2.alphacoders.com/934/934768.jpg);
     width: 100%;
@@ -1062,6 +982,7 @@ width: 100%;
     justify-content: center;
     align-items: center;
     padding-left: 500px;
+    margin-top: 50px;
 }
 .cubito{
     width: 500px;
@@ -1069,7 +990,7 @@ width: 100%;
     background-color: rgba(0, 255, 255, 0);
     border: 1px solid gray;
     transform: rotateZ(45deg);
-    animation: transfo 6s forwards infinite;
+    animation: transfo 4s forwards infinite;
     
 }
 @keyframes transfo{
@@ -1460,5 +1381,101 @@ body{
     }
 
 }
+.logo{
+    width: 115px;
+    height: 50px;
+}
+.nav-link{
+    text-transform: uppercase;
+    font-family: 'Oswald', sans-serif;
+}
+.nav-link:hover{
+    background-color: rgb(37, 108, 240);
+    transition: 0.5s;
+}
+.nav-item{
+    padding: 0px 5px;
+}
+.etc{
+    height: 100%;
+    background-image: url(https://wallpaperaccess.com/full/1819872.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+}
 
 
+.card{
+    background-color: rgb(15, 11, 82);
+    height: 375px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 60px;
+    text-transform: uppercase;
+    font-family: 'Oswald', sans-serif;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+
+}
+.card-text{
+    color: aliceblue;
+}
+.card-title{
+    color: aliceblue;
+}
+.btn{
+    background-color: rgba(0, 0, 0, 0.849);
+    border: 1px solid rgb(255, 255, 255);
+    margin-top: 20px;
+}
+.btn:hover{
+    background-color: rgb(15, 11, 82);
+    border:1px solid white;
+    transition: 0.3s;
+}
+.etc h2{
+    width: 100%;
+    height: 55px;
+    text-align: center;
+    margin-top: 50px;
+    font-size: 55px;
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    color: rgb(0, 0, 0);
+}
+.etc h2 span{
+    color: rgb(99, 16, 99);
+}
+
+.wtf{
+    color: rgb(160, 154, 154);
+    text-align: center;
+}
+.teen{
+    display: flex;
+
+}
+.teen img{
+    padding-right: 10px;
+    width: 90px;
+}
+.teentext p{
+    text-transform: uppercase;
+    font-family: 'Oswald', sans-serif;
+    font-size: 16px;
+    margin: 5px
+
+}
+footer{
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
